fixes new weird layout bug in Chrome

--- a/assets/style.css
+++ b/assets/style.css
@@ -101,6 +101,7 @@ header {
   font-size: 1em;
   padding: 8px;
   outline: none;
+  width: 70px;
 }
 
 .color-format-input > input:focus {
